--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Dependances pour le systeme multi-agents CrewAI
+# Dependances pour BrainStormIA - Multi-agents avec Celery + WebSocket
 
 # Framework multi-agents
 crewai>=0.11.0
@@ -7,11 +7,36 @@ crewai-tools>=0.4.0
 # LLM et integration OpenAI
 langchain>=0.1.0
 langchain-openai>=0.0.5
+langchain-community>=0.0.20
 openai>=1.12.0
 
-# Interface web
-flask>=3.0.0
-flask-cors>=4.0.0
+# API Backend
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+websockets>=12.0
+python-multipart>=0.0.6
+
+# Firebase integration
+firebase-admin>=6.5.0
+
+# Asynchronisme & Workers
+celery>=5.3.0
+redis>=5.0.0
+
+# RAG (Vector Database)
+qdrant-client>=1.15.1
+
+# Text-to-Speech
+elevenlabs>=1.0.0
+
+# Document loaders
+pypdf>=3.17.0
+python-docx>=1.1.0
+openpyxl>=3.1.0
+unstructured>=0.11.0
+python-magic-bin>=0.4.14; platform_system == "Windows"
 
 # Utilitaires
 python-dotenv>=1.0.0
+werkzeug>=3.0.0
+pydantic>=2.0.0
