--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,8 @@ flask-cors>=4.0.0
 
 # Utilitaires
 python-dotenv>=1.0.0
+
+# ElevenLabs integration vocale
+elevenlabs>=1.0.0
+pyaudio>=0.2.14
+SpeechRecognition>=3.10.0
