--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ redis>=5.0.0
 
 # RAG (Vector Database)
 qdrant-client>=1.15.1
+pinecone-client>=3.0.0
 
 # Text-to-Speech
 elevenlabs>=1.0.0
@@ -40,3 +41,4 @@ python-magic-bin>=0.4.14; platform_system == "Windows"
 python-dotenv>=1.0.0
 werkzeug>=3.0.0
 pydantic>=2.0.0
+requests>=2.31.0
