--- a/requirements.txt
+++ b/requirements.txt
@@ -40,4 +40,5 @@ python-magic-bin>=0.4.14; platform_system == "Windows"
 python-dotenv>=1.0.0
 werkzeug>=3.0.0
 pydantic>=2.0.0
+email-validator>=2.1.0
 requests>=2.31.0
