--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,13 @@
-# Dependances pour le systeme multi-agents CrewAI
-
-# Framework multi-agents
-crewai>=0.11.0
-crewai-tools>=0.4.0
-
-# LLM et integration OpenAI
-langchain>=0.1.0
-langchain-openai>=0.0.5
-openai>=1.12.0
+# Dépendances pour AI Meeting Room - Multi-Agents
 
 # Interface web
 flask>=3.0.0
 flask-cors>=4.0.0
 
+# APIs
+openai>=1.12.0
+elevenlabs>=1.0.0
+
 # Utilitaires
 python-dotenv>=1.0.0
 requests>=2.31.0
-
-# ElevenLabs integration vocale
-elevenlabs>=1.0.0
-pyaudio>=0.2.14
-SpeechRecognition>=3.10.0
